--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#Server configuration
-server.servlet.context-path=/Spring
-server.port=8081
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3308/test\
+spring.datasource.url=jdbc:mysql://localhost:3308/pidevv\
 ?createDatabaseIfNotExist=true\
 &useUnicode=true\
 &useJDBCCompliantTimezoneShift=true\
@@ -13,4 +10,17 @@ spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Email server configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yussefnaoui2001@gmail.com
+spring.mail.password=rhcsisvkunrrqmwj
+
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Email sender configuration
+spring.mail.properties.mail.smtp.from=hello
