--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Email server configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yussefnaoui2001@gmail.com
-spring.mail.password=rhcsisvkunrrqmwj
+spring.mail.username=nope@nope.nope
+spring.mail.password=nice try
 
 
 spring.mail.properties.mail.smtp.auth=true
