--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Email server configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nope@nope.nope
+spring.mail.username=nope@nope.com
 spring.mail.password=nice try
 
 
